--- a/wiki/PlanningAuthoritiesN.wiki
+++ b/wiki/PlanningAuthoritiesN.wiki
@@ -19,7 +19,7 @@
 || || *North Lincolnshire* || Scunthorpe || PlanetApplicationEnquiry || http://www.planning.northlincs.gov.uk/planet/ispforms.asp?ServiceKey=SysDoc-PlanetApplicationEnquiry ||
 || || *North Norfolk District Council* || North Norfolk || no date search || https://www.northnorfolk.org/cgi-bin/publiclivedb.15000.exe/pl/pp7010.ad ||
 || || *North Shropshire District Council* || Wem || Daily pdfs || http://www.northshropshiredc.gov.uk/static/page1048.htm ||
-|| || *North Somerset Council* || Weston-super-Mare || weekly lists in html || http://212.158.113.30/WAM/search/pas/index.htm ||
+|| || *North Somerset Council* || Weston-super-Mare || [WAM] || http://212.158.113.30/WAM/search/pas/index.htm ||
 || Done || North Tyneside || Newcastle Upon Tyne || PublicAccess || http://publicaccess.northtyneside.gov.uk/PublicAccess/tdc/DcApplication/application_searchform.aspx ||
 || Done || North Warwickshire Borough Council || Atherstone || ApplicationSearchServlet|| http://planning.northwarks.gov.uk/portal/servlets/WeeklyListServlet ||
 || Done || North West Leicestershire District Council || Coalville || PublicAccess || http://paccess.nwleics.gov.uk/PublicAccess/tdc/DcApplication/application_searchform.aspx ||
@@ -30,6 +30,6 @@
 || || *Northamptonshire County Council* || Northampton || all apps in html or excel|| http://www.northamptonshire.gov.uk/Environment/DC/pln_apps.htm ||
 || Done || Northumberland County Council || Morpeth || PublicAccess || http://planning.northumberland.gov.uk/PublicAccess/tdc/DcApplication/application_searchform.aspx ||
 || Done || Norwich City Council || Norwich || PublicAccess|| ||
-|| || *Nottingham City Council* || Nottingham || weekly lists in html || http://www.nottinghamcity.gov.uk/planning/Report/weeksrch.htm ||
+|| || *Nottingham City Council* || Nottingham || [WAM] || http://www.nottinghamcity.gov.uk/planning/Report/weeksrch.htm ||
 || || *Nottinghamshire County Council* || Nottingham, West Bridgford || WAM || http://plan4.nottinghamcity.gov.uk/WAM/search/pas/index.htm ||
 || || *Nuneaton & Bedworth Borough Council* || Nuneaton || searchable by date || http://www.nuneatonandbedworth.gov.uk/environment-planning/planning/planning-applications/search-planning-applications ||
