--- a/wiki/PlanningAuthoritiesR.wiki
+++ b/wiki/PlanningAuthoritiesR.wiki
@@ -12,7 +12,7 @@
 || Done || Rochdale || Rochdale || [SwiftLG] || http://www.rochdale.gov.uk/swiftlg/apas/run/wphappcriteria.display ||
 || Done || Rochford || Rochford || PublicAccess || http://www.rochford.gov.uk/PublicAccess/ ||
 || || *Rossendale* || Bacup || weekly lists as pdf || http://www.rossendale.gov.uk/site/scripts/download_info.php?downloadID=179 ||
-|| || *Rother* || Bexhill || weekly lists in html || http://www.planning.rother.gov.uk/WAM/search/pas/index.htm ||
+|| || *Rother* || Bexhill || [WAM] || http://www.planning.rother.gov.uk/WAM/search/pas/index.htm ||
 || || *Rotherham* || Rotherham || weekly lists as pdf || http://www.rotherham.gov.uk/graphics/YourHome/Planning/Development+Control/Weekly+Planning+Applications/ ||
 || || *Rugby* || Rugby || down for maintenance || http://www.rugby.gov.uk/site/scripts/documents_info.php?documentID=1122 ||
 || || *Runnymede* || Addlestone || weekly lists as html || http://ww2.runnymede.gov.uk/home/latest/wklyplanapps/wklyplanapps.asp ||
