--- a/wiki/PossibleGroups.wiki
+++ b/wiki/PossibleGroups.wiki
@@ -10,11 +10,10 @@ PlanIT (urls contain planning_search.aspx):
   * Richmond (London)
   * Wiltshire
 
-Is there a group with urls like this?
+Ocella? Is there a group with urls like this?
 http://sun11.nelincs.gov.uk/portal/page?_pageid=256,32885&_dad=portal&_schema=PORTAL
 
   * Breckland
-  * Castle Point
   * Ellesmere Port
   * Havering
   * Middlesborough
