--- a/wiki/PossibleGroups.wiki
+++ b/wiki/PossibleGroups.wiki
@@ -18,6 +18,7 @@ http://sun11.nelincs.gov.uk/portal/page?_pageid=256,32885&_dad=portal&_schema=PO
   * Havering
   * Middlesborough
   * North East Lincolnshire
+  * Uttlesford
 
 PAM:
 
