--- a/wiki/PossibleGroups.wiki
+++ b/wiki/PossibleGroups.wiki
@@ -3,22 +3,13 @@
 This page contains some groups of planning authorities for which we don't yet have a scraper (as far as I know), but which might be best handled together.
 
 PlanetApplicationEnquiry
+[Ocella]
 
 PlanIT (urls contain planning_search.aspx):
   * Houndslow
   * Kingston
   * Richmond (London)
   * Wiltshire
-
-Ocella? Is there a group with urls like this?
-http://sun11.nelincs.gov.uk/portal/page?_pageid=256,32885&_dad=portal&_schema=PORTAL
-
-  * Breckland
-  * Ellesmere Port
-  * Havering
-  * Middlesborough
-  * North East Lincolnshire
-  * Uttlesford
 
 PAM:
 
