Edited wiki page through web user interface.

--- a/wiki/PossibleGroups.wiki
+++ b/wiki/PossibleGroups.wiki
@@ -6,7 +6,7 @@ PlanetApplicationEnquiry
 [Ocella]
 
 PlanIT (urls contain planning_search.aspx):
-  * Houndslow
+  * Hounslow
   * Kingston
   * Richmond (London)
   * Wiltshire
