--- a/wiki/PlanningAuthoritiesS.wiki
+++ b/wiki/PlanningAuthoritiesS.wiki
@@ -11,7 +11,7 @@
 || Done || Sheffield City Council || Sheffield || PublicAccess || http://planning.sheffield.gov.uk/publicaccess/default.aspx ||
 || || *Shepway District Council* || Folkestone || ukplanning - searchable by date. also html weekly list|| http://www.ukplanning.com/ukp/custom/forwards/selectandsearch.jsp?council=Shepway%20District%20Council&fwd=search,   http://www.shepway.gov.uk/webapp/service/query/planning-week.do?go=on ||
 || || *Shetland Islands Council* || Lerwick || list as html, can show last 2 weeks, month, etc || http://www.shetland.gov.uk/planningcontrol/apps/ ||
-|| In Progress || *Shrewsbury & Atcham Borough Council* || Shrewsbury || PlanningExplorer || http://www2.shrewsbury.gov.uk/MVM/Online/PL/GeneralSearch.aspx ||
+|| Done || Shrewsbury & Atcham Borough Council || Shrewsbury || PlanningExplorer || http://www2.shrewsbury.gov.uk/MVM/Online/PL/GeneralSearch.aspx ||
 || || *Shropshire County Council* || Shrewsbury || searchable by date (minerals and waste only) || http://planning.shropshire.gov.uk/PlanAppSrch.asp ||
 || Done || Slough Borough Council || Slough || [SwiftLG] || http://www2.slough.gov.uk/swiftlg/apas/run/wphappcriteria.display ||
 || Done || Snowdonia National Park Authority || Penrhynduedraeth || [SwiftLG] || http://www.eryri-npa.co.uk/swiftlg_test/apas_test/run/wphappcriteria.display ||
