--- a/wiki/PlanningAuthoritiesD.wiki
+++ b/wiki/PlanningAuthoritiesD.wiki
@@ -10,7 +10,7 @@
 || || *Derwentside* || Derwentside District Council || searchable by date received || http://www.derwentside.gov.uk/index.cfm?articleid=8427 ||
 || || *Devon* || Devon County Council || monthly lists of councils own applications || http://www.devon.gov.uk/index/environment/planning/planning-system/planning_applications-mw/planning_applications.htm ||
 || Done || Doncaster || Doncaster Metropolitan Borough Council || PublicAccess || http://local.doncaster.gov.uk/PublicAccess/tdc/ ||
-|| Broken || Dorset || Dorset County Council ||  AtriumePlanning || http://www.dorsetforyou.com/ePlanning/searchPageLoad.do ||
+|| Done || Dorset || Dorset County Council ||  AtriumePlanning || http://www.dorsetforyou.com/ePlanning/searchPageLoad.do ||
 || || *Dover* || Dover District Council || searchable by date received || http://www.dover.gov.uk/planning/Search_net/search.aspx ||
 || Done || Dudley || Dudley Metropolitan Borough Council || [SwiftLG] || http://www2.dudley.gov.uk/swiftlg/apas/run/Wphappcriteria.display ||
 || || *Dumfries and Galloway* || Dumfries and Galloway Council || weekly pdy lists separated into five areas || http://www.dumgal.gov.uk/dumgal/MiniWeb.aspx?id=91&menuid=1408&openid=1102 ||
