Edited wiki page through web user interface.

--- a/wiki/AtriumePlanning.wiki
+++ b/wiki/AtriumePlanning.wiki
@@ -7,7 +7,7 @@ Known sites of this sort are:
   * Cumbria
   * Dorset
   * Lincolnshire
-  * Somerset (I'm not sure this one still exists - 24/11/2007)
+  * Somerset
   * Suffolk
   * West Sussex
 
