--- a/wiki/PlanningAuthoritiesG.wiki
+++ b/wiki/PlanningAuthoritiesG.wiki
@@ -7,7 +7,7 @@
 || Done || Gravesham Borough Council || Gravesend || PublicAccess || http://plan.gravesham.gov.uk/PublicAccess/ ||
 ||  || *Great Yarmouth Borough Council* || Great Yarmouth || weekly and monthly pdfs || http://www.great-yarmouth.gov.uk/planning/development_control/planning_applications/archived_applications_2006.htm ||
 ||  || *Greenwich Borough Council* || London || weekly lists in html || http://www.greenwich.gov.uk/Greenwich/YourEnvironment/PlanningAndBuilding/PlanningBuildingConservation/ApplicationsDecisionsAppeals/PlanningApplications/April/ ||
-|| In Progress || *Guildford Borough Council* || Guildford || it's AcolNet, but not as we know it. || http://www.guildford.gov.uk/acolnet/ ||
+|| Done || Guildford Borough Council || Guildford || AcolNet || http://www.guildford.gov.uk/DLDC_Version_2/acolnetcgi.exe?ACTION=UNWRAP&RIPNAME=Root.pgesearch ||
 || Done || Gwynedd Council || Caernarfon, Dolgellau, Pwllheli || [SwiftLG] || http://www.gwynedd.gov.uk/swiftlg/apas/run/wphappcriteria.display ||
  
  
