Edited wiki page through web user interface.

--- a/wiki/AcolNet.wiki
+++ b/wiki/AcolNet.wiki
@@ -8,14 +8,14 @@ We have a scraper for this sort of site. The sites all look subtly different, so
   * Bolton
   * Bridgenorth
   * Bury
-  * Cambridgeshire
+  * Cambridgeshire (very different)
   * Canterbury
   * Carlisle
   * Croydon
   * Derby
   * East Lindsey
   * Fylde
-  * Guildford (an odd one)
+  * Guildford
   * Harlow
   * Havant
   * Hertsmere
