--- a/wiki/AcolNet.wiki
+++ b/wiki/AcolNet.wiki
@@ -34,4 +34,4 @@ We have a scraper for this sort of site. The sites all look subtly different, so
   * Southwark
   * Suffolk Coastal
   * Surrey Heath
-  * Wychavon 
+  * Wychavon (very different)
