Edited wiki page through web user interface.

--- a/wiki/ScraperDevelopment.wiki
+++ b/wiki/ScraperDevelopment.wiki
@@ -1,10 +1,9 @@
 = Scrapers being worked on =
 
-  * Bridgnorth (Duncan) - AcolNet. implemented, but returns error 400 when accessed by script
   * Cambridgeshire (Duncan) - AcolNet. no advanced search page - will need some work
-  * Canterbury (Duncan) - AcolNet. results table is different from usual format
-  * Guildford (Duncan) - AcolNet, but odd.
   * Isle of Man (Dan)
+  * Kensington and Chelsea (Duncan) - AcolNet (maybe!)
+  * Mid Bedfordshire (Duncan) - AcolNet (but requires username and password)
   * Surrey Heath (Duncan) - AcolNet - The problem here looks like it might be cookie and javascript related.
   * Wychavon (Duncan) - an AcolNet site, but slightly odd.
 
