Edited wiki page through web user interface.

--- a/wiki/ScraperDevelopment.wiki
+++ b/wiki/ScraperDevelopment.wiki
@@ -10,6 +10,7 @@
 = Scrapers done, but no postcodes =
   * Bassetlaw (well almost none, anyway)
   * Broadland
+  * Christchurch
   * Derby
   * Forest Heath
   * Mid Suffolk
