--- a/wiki/PlanningAuthoritiesC.wiki
+++ b/wiki/PlanningAuthoritiesC.wiki
@@ -11,7 +11,7 @@
 || || *Carmarthenshire* ||   Carmarthenshire County Council  || searchable by date || http://www.carmarthenshire.gov.uk/CCC_APPS/eng/plannaps/ccc_planningapplications.asp ||
 || || *Carrick* ||    Carrick District Council  || searchable by date || http://www.carrick.gov.uk/index.cfm?articleid=13904 ||
 || || *Castle Morpeth* ||    Castle Morpeth Borough Council  || searchable by date || http://www.castlemorpeth.gov.uk/addon/planningapps/search.asp ||
-|| ||  *Castle Point* ||   Castle Point Borough Council  || [WAM] || castle p ||
+|| Done || Castle Point ||   Castle Point Borough Council  || [WAM] || castle p ||
 || ||  *Ceredigion* ||   Ceredigion County Council  || Excel files by date! || http://www.ceredigion.gov.uk/index.cfm?articleid=3125 ||
 || Done || Charnwood ||    Charnwood Borough Council  || PlanningExplorer || http://portal.charnwoodbc.gov.uk/MVM/Online/PL/Home.aspx ||
 || Done ||  Chelmsford || Chelmsford Borough Council || PublicAccess || http://web1.chelmsfordbc.gov.uk/publicaccess/ ||
@@ -27,7 +27,7 @@
 || Done (No postcodes, but OSGB) ||  Christchurch ||   Christchurch Borough Council || Perl scraper from Tom || http://www.dorsetforyou.com/index.jsp?articleid=356063 ||
 || Done ||  City ||  Corporation of London || PublicAccess ||  ||
 ||  ||  *Clackmannanshire* ||   Clackmannanshire Council || Searchable by date || http://www.clacksweb.org.uk/property/planningregister/ ||
-||  || *Colchester* ||  Colchester Borough Council || [WAM] || http://www.planning.colchester.gov.uk/WAM/searchsubmit/performOption.do?action=search ||
+|| Done || Colchester ||  Colchester Borough Council || [WAM] || http://www.planning.colchester.gov.uk/WAM/searchsubmit/performOption.do?action=search ||
 ||  ||  *Comhairle nan Eilean Siar* || Stornaway || Weekly lists in html - nice easy looking format || http://www.cne-siar.gov.uk/planapps/april2007.htm ||
 ||  || *Congleton Borough Council* || Congleton || Weekly lists as pdf || http://www.congleton.gov.uk/?t=589 ||
 ||  || *Conwy County Borough Council* || Conwy || Weekly lists as pdf (password "George" on the pdfs) || http://www.conwy.gov.uk/section.asp?cat=1536 ||
