--- a/wiki/PlanningAuthoritiesN.wiki
+++ b/wiki/PlanningAuthoritiesN.wiki
@@ -30,6 +30,6 @@
 || || *Northamptonshire County Council* || Northampton || all apps in html or excel|| http://www.northamptonshire.gov.uk/Environment/DC/pln_apps.htm ||
 || Done || Northumberland County Council || Morpeth || PublicAccess || http://planning.northumberland.gov.uk/PublicAccess/tdc/DcApplication/application_searchform.aspx ||
 || Done || Norwich City Council || Norwich || PublicAccess|| ||
-|| Done || Nottingham City Council || Nottingham || [WAM] || http://www.nottinghamcity.gov.uk/planning/Report/weeksrch.htm ||
-|| || *Nottinghamshire County Council* || Nottingham, West Bridgford || [WAM] || http://plan4.nottinghamcity.gov.uk/WAM/search/pas/index.htm ||
+|| Done || Nottingham City Council || Nottingham || [WAM] || http://plan4.nottinghamcity.gov.uk/WAM/search/pas/index.html||
+|| || *Nottinghamshire County Council* || Nottingham, West Bridgford || Searchable by date || http://www.nottinghamcity.gov.uk/planning/Report/weeksrch.html  ||
 || || *Nuneaton & Bedworth Borough Council* || Nuneaton || searchable by date || http://www.nuneatonandbedworth.gov.uk/environment-planning/planning/planning-applications/search-planning-applications ||
