--- a/wiki/ScraperDevelopment.wiki
+++ b/wiki/ScraperDevelopment.wiki
@@ -5,6 +5,7 @@
   * Kensington and Chelsea (Duncan) - AcolNet (maybe!)
   * Mid Bedfordshire (Duncan) - AcolNet (but requires username and password)
   * Surrey Heath (Duncan) - AcolNet - The problem here looks like it might be cookie and javascript related.
+  * Westminster (Duncan) - A slighly different WAM site.
   * Wychavon (Duncan) - an AcolNet site, but slightly odd.
 
 = Scrapers done, but no postcodes =
