--- a/wiki/PlanningAuthoritiesL.wiki
+++ b/wiki/PlanningAuthoritiesL.wiki
@@ -8,6 +8,6 @@
 || Done || Lewisham Borough Council || Catford || AcolNet || http://acolnet.lewisham.gov.uk/lewis-xslpagesdc/acolnetcgi.exe?ACTION=UNWRAP&RIPNAME=Root.PgeSearch ||
 ||  || *Lichfield District Council* || Lichfield || no useful search, html list of the last week, and previous such lists || http://www.lichfielddc.gov.uk/site/scripts/planning.php ||
 || Done || Lincoln City Council || Lincoln || PlanningExplorer || http://online.lincoln.gov.uk/MVM/Online/PL/GeneralSearch.aspx ||
-|| Done || Lincolnshire County Council || Lincoln || AtriumePlanning || http://apps1.lincolnshire.gov.uk/ePlanning/searchPageLoad.do ||
+|| Done || Lincolnshire County Council || Lincoln || AtriumePlanning || http://eplanning.lincolnshire.gov.uk/ePlanning/loadResults.do ||
 || Done || Liverpool City Council || Liverpool || PlanningExplorer || http://www.liverpool.gov.uk/environment/planning/mvm_explorer.asp ||
 || Done  ||Luton Borough Council || Luton || PublicAccess ||  http://www.eplan.luton.gov.uk/PublicAccess/tdc/tdc_home.aspx ||
